@@ -1,10 +1,10 @@
 package dev.openfeature.sdk;
 
 import dev.openfeature.sdk.internal.ExcludeFromGeneratedCoverageReport;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
-import lombok.EqualsAndHashCode;
 import lombok.ToString;
 import lombok.experimental.Delegate;
 
@@ -16,14 +16,16 @@ import lombok.experimental.Delegate;
  * not be modified after instantiation.
  */
 @ToString
-@EqualsAndHashCode
 @SuppressWarnings("PMD.BeanMembersShouldSerialize")
 public final class ImmutableContext implements EvaluationContext {
 
-    public static final ImmutableContext EMPTY = new ImmutableContext();
+    public static final ImmutableContext EMPTY = new ImmutableContext(Collections.emptyMap());
 
     @Delegate(excludes = DelegateExclusions.class)
     private final ImmutableStructure structure;
+
+    // Lazily computed hash code, safe because this class is immutable.
+    private volatile Integer cachedHashCode;
 
     /**
      * Create an immutable context with an empty targeting_key and attributes
@@ -58,7 +60,7 @@ public final class ImmutableContext implements EvaluationContext {
      * @param attributes   evaluation context attributes
      */
     public ImmutableContext(String targetingKey, Map<String, Value> attributes) {
-        if (targetingKey != null && !targetingKey.trim().isEmpty()) {
+        if (targetingKey != null && !targetingKey.isBlank()) {
             this.structure = new ImmutableStructure(targetingKey, attributes);
         } else {
             this.structure = new ImmutableStructure(attributes);
@@ -93,6 +95,40 @@ public final class ImmutableContext implements EvaluationContext {
         Map<String, Value> attributes = this.asMap();
         EvaluationContext.mergeMaps(ImmutableStructure::new, attributes, overridingContext.asUnmodifiableMap());
         return new ImmutableContext(attributes);
+    }
+
+    /**
+     * Equality for EvaluationContext implementations is defined in terms of their resolved
+     * attribute maps. Two contexts are considered equal if their {@link #asMap()} representations
+     * contain the same key/value pairs, regardless of how the context was constructed or layered.
+     *
+     * @param o the object to compare with this context
+     * @return true if the other object is an EvaluationContext whose resolved attributes match
+     */
+    @Override
+    public boolean equals(Object o) {
+        return isEqualTo(o);
+    }
+
+    /**
+     * Computes a hash code consistent with {@link #equals(Object)}. Since this context is immutable,
+     * the hash code is lazily computed once from its resolved attribute map and then cached.
+     *
+     * @return the cached hash code derived from this context's attribute map
+     */
+    @Override
+    public int hashCode() {
+        Integer result = cachedHashCode;
+        if (result == null) {
+            synchronized (this) {
+                result = cachedHashCode;
+                if (result == null) {
+                    result = structure.hashCode();
+                    cachedHashCode = result;
+                }
+            }
+        }
+        return result;
     }
 
     @SuppressWarnings("all")
